--- a/_posts/2025-05-02-blog-post-1.md
+++ b/_posts/2025-05-02-blog-post-1.md
@@ -1,12 +1,10 @@
 ---
-title: 'Blog Post number 4'
+title: '有氧训练实践（一）：Zone 2 有氧训练的笔记与体会'
 date: 2025-05-02
 permalink: /posts/2025/05/blog-post-1/
 tags:
   - cardio
 ---
-
-# 有氧训练实践（一）：Zone 2 有氧训练的笔记与体会
 
 
 最近一年，自己的力量训练进入了一个相对稳定的平台期，于是开始将更多注意力转向心肺训练，并查阅了一些相关文献。这篇笔记结合了过去大半年的学习与实践体会，以及我刚读完的一篇汇聚十余位国际专家共识的最新研究综述 [1]，来聊聊目前越来越受关注的 **Zone 2 训练**。
