--- a/_posts/2025-05-02-blog-post-1.md
+++ b/_posts/2025-05-02-blog-post-1.md
@@ -109,7 +109,7 @@ tags:
 
 
 
-部分参考文献
+### 部分参考文献
 
 1. Sitko, S., *et al.* (2025). What is “Zone 2 training”? Experts’ viewpoint on definition, training methods, and expected adaptations.
 2. Williams, N. (2017). The Borg Rating of Perceived Exertion (RPE) scale. *Occupational Medicine, 67*(5), 404–405.
