--- a/_posts/2025-06-11-blog-post-1.md
+++ b/_posts/2025-06-11-blog-post-1.md
@@ -2,6 +2,8 @@
 title: '🥗 营养篇（一）：能量平衡｜体重管理的底层逻辑？'
 date: 2025-06-21
 permalink: /posts/2025/06/blog-post-1/
+redirect_to: "https://mp.weixin.qq.com/s/nPwRSK6XfYpgl8GBnRFThQ"
+excerpt: ""
 tags:
   - nutrition
 ---
